RESOLVED FIXED73520
REGRESSION(r101524): Article titles invisible until hover on blaze.com
https://bugs.webkit.org/show_bug.cgi?id=73520
Summary REGRESSION(r101524): Article titles invisible until hover on blaze.com
Jim Oase
Reported 2011-11-30 21:29:10 PST
Created attachment 117327 [details] Missing subtitles.... Got to the site http://www.theblaze.com/ When page opens the subtitle are missing... see attached picture Mover cursor over area where subtitles should be and a that subtitle will appear.
Attachments
Missing subtitles.... (246.46 KB, image/jpeg)
2011-11-30 21:29 PST, Jim Oase
no flags
subtitle appears only when cursor is over that subtitle area (528.26 KB, image/jpeg)
2011-11-30 21:30 PST, Jim Oase
no flags
Reduced test case (527 bytes, text/html)
2011-12-01 14:01 PST, Andreas Kling
no flags
patch (7.21 KB, patch)
2011-12-02 09:32 PST, Antti Koivisto
darin: review+
Jim Oase
Comment 1 2011-11-30 21:30:56 PST
Created attachment 117329 [details] subtitle appears only when cursor is over that subtitle area
Alexey Proskuryakov
Comment 2 2011-12-01 10:55:43 PST
Confirmed as a regression from shipping Safari with r101683. Unfortunately, this page is affected by recently introduced and fixed CSS crashes, making finding regression range complicated. Andreas, perhaps you would be willing to do initial investigation, and assign the blame?
Andreas Kling
Comment 3 2011-12-01 10:58:40 PST
(In reply to comment #2) > Confirmed as a regression from shipping Safari with r101683. > > Unfortunately, this page is affected by recently introduced and fixed CSS crashes, making finding regression range complicated. Andreas, perhaps you would be willing to do initial investigation, and assign the blame? Sure thing Alexey, taking this.
Andreas Kling
Comment 4 2011-12-01 14:01:02 PST
Created attachment 117482 [details] Reduced test case An early christmas present to Antti from the Reduction Fairy.
Antti Koivisto
Comment 5 2011-12-02 09:32:30 PST
Antti Koivisto
Comment 6 2011-12-02 09:42:56 PST
Note You need to log in before you can comment on or make changes to this bug.