https://bugs.webkit.org/show_bug.cgi?id=73520 REGRESSION(r101524): Article titles invisible until hover on blaze.com

Source/WebCore:

Reviewed by Darin Adler.

We need to invalidate the matched declaration cache when new web fonts are loaded.
Fonts in the cached RenderStyles may not be valid anymore.

Also renamed m_matchStyleDeclarationCache -> m_matchedStyleDeclarationCache.

Test reduction by the Reduction Fairy (aka kling).

Test: fast/css/font-face-cache-bug.html

* css/CSSFontSelector.cpp:
(WebCore::CSSFontSelector::dispatchInvalidationCallbacks):
* css/CSSStyleSelector.cpp:
(WebCore::CSSStyleSelector::findFromMatchedDeclarationCache):
(WebCore::CSSStyleSelector::addToMatchedDeclarationCache):
(WebCore::CSSStyleSelector::invalidateMatchedDeclarationCache):
* css/CSSStyleSelector.h:

LayoutTests:

Reviewed by Darin Adler.

Test reduction by the Reduction Fairy (aka kling).

* fast/css/font-face-cache-bug-expected.txt: Added.
* fast/css/font-face-cache-bug.html: Added.



Canonical link: https://commits.webkit.org/90283@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@101812 268f45cc-cd09-0410-ab3c-d52691b4dbfc